Adiçao da pagina dos produtos, adição do footer

--- a/index/index.html
+++ b/index/index.html
@@ -77,37 +77,73 @@
     <h3 class="section-title">Camisas Retrô</h3>
 
     <div class="products-grid">
-      <article class="product-card">
+      <article class="product-card"
+        data-id="retro-1"
+        data-name="Flamengo 1995"
+        data-price="249.90"
+        data-image="img/camisa1.png"
+        data-description="Camisa retrô Flamengo 1995, tecido premium."
+      >
         <img src="img/camisa1.png">
         <h4>Flamengo 1995</h4>
         <span class="price">R$ 249,90</span>
       </article>
 
-      <article class="product-card">
+      <article class="product-card"
+        data-id="retro-2"
+        data-name="Brasil 1970"
+        data-price="269.90"
+        data-image="img/camisa2.png"
+        data-description="Camisa histórica da seleção brasileira de 1970."
+      >
         <img src="img/camisa2.png">
         <h4>Brasil 1970</h4>
         <span class="price">R$ 269,90</span>
       </article>
 
-      <article class="product-card">
+      <article class="product-card"
+        data-id="retro-3"
+        data-name="Milan 1989"
+        data-price="289.90"
+        data-image="img/camisa3.png"
+        data-description="Camisa retrô do Milan campeão europeu."
+      >
         <img src="img/camisa3.png">
         <h4>Milan 1989</h4>
         <span class="price">R$ 289,90</span>
       </article>
 
-      <article class="product-card hidden">
+      <article class="product-card hidden"
+        data-id="retro-4"
+        data-name="Ajax 1995"
+        data-price="259.90"
+        data-image="img/camisa4.png"
+        data-description="Camisa lendária do Ajax de 1995."
+      >
         <img src="img/camisa4.png">
         <h4>Ajax 1995</h4>
         <span class="price">R$ 259,90</span>
       </article>
 
-      <article class="product-card hidden">
+      <article class="product-card hidden"
+        data-id="retro-5"
+        data-name="Barcelona 1999"
+        data-price="279.90"
+        data-image="img/camisa5.png"
+        data-description="Camisa clássica do Barcelona anos 90."
+      >
         <img src="img/camisa5.png">
         <h4>Barcelona 1999</h4>
         <span class="price">R$ 279,90</span>
       </article>
 
-      <article class="product-card hidden">
+      <article class="product-card hidden"
+        data-id="retro-6"
+        data-name="Corinthians 2000"
+        data-price="239.90"
+        data-image="img/camisa6.png"
+        data-description="Camisa do Corinthians campeão mundial de 2000."
+      >
         <img src="img/camisa6.png">
         <h4>Corinthians 2000</h4>
         <span class="price">R$ 239,90</span>
@@ -118,40 +154,222 @@
   </section>
 
   <!-- SELEÇÕES -->
-  <section class="store-section" id="selecoes">
+  <section class="store-section" id="selecoes" data-category="selecoes">
     <h3 class="section-title">Seleções</h3>
 
     <div class="products-grid">
-      <article class="product-card"><img src="img/camisa1.png"><h4>Brasil 2022</h4><span class="price">R$ 299,90</span></article>
-      <article class="product-card"><img src="img/camisa2.png"><h4>Argentina 2022</h4><span class="price">R$ 299,90</span></article>
-      <article class="product-card"><img src="img/camisa3.png"><h4>França 2018</h4><span class="price">R$ 289,90</span></article>
+      <article class="product-card"
+        data-id="sel-1"
+        data-name="Brasil 2022"
+        data-price="299.90"
+        data-image="img/camisa1.png"
+        data-description="Camisa oficial Brasil Copa 2022."
+      >
+        <img src="img/camisa1.png">
+        <h4>Brasil 2022</h4>
+        <span class="price">R$ 299,90</span>
+      </article>
 
-      <article class="product-card hidden"><img src="img/camisa4.png"><h4>Alemanha 1990</h4><span class="price">R$ 279,90</span></article>
-      <article class="product-card hidden"><img src="img/camisa5.png"><h4>Itália 2006</h4><span class="price">R$ 269,90</span></article>
-      <article class="product-card hidden"><img src="img/camisa6.png"><h4>Holanda 1988</h4><span class="price">R$ 289,90</span></article>
+      <article class="product-card"
+        data-id="sel-2"
+        data-name="Argentina 2022"
+        data-price="299.90"
+        data-image="img/camisa2.png"
+        data-description="Camisa campeã do mundo Argentina 2022."
+      >
+        <img src="img/camisa2.png">
+        <h4>Argentina 2022</h4>
+        <span class="price">R$ 299,90</span>
+      </article>
+
+      <article class="product-card"
+        data-id="sel-3"
+        data-name="França 2018"
+        data-price="289.90"
+        data-image="img/camisa3.png"
+        data-description="Camisa campeã mundial França 2018."
+      >
+        <img src="img/camisa3.png">
+        <h4>França 2018</h4>
+        <span class="price">R$ 289,90</span>
+      </article>
+
+      <article class="product-card hidden"
+        data-id="sel-4"
+        data-name="Alemanha 1990"
+        data-price="279.90"
+        data-image="img/camisa4.png"
+        data-description="Camisa campeã mundial Alemanha 1990."
+      >
+        <img src="img/camisa4.png">
+        <h4>Alemanha 1990</h4>
+        <span class="price">R$ 279,90</span>
+      </article>
+
+      <article class="product-card hidden"
+        data-id="sel-5"
+        data-name="Itália 2006"
+        data-price="269.90"
+        data-image="img/camisa5.png"
+        data-description="Camisa campeã mundial Itália 2006."
+      >
+        <img src="img/camisa5.png">
+        <h4>Itália 2006</h4>
+        <span class="price">R$ 269,90</span>
+      </article>
+
+      <article class="product-card hidden"
+        data-id="sel-6"
+        data-name="Holanda 1988"
+        data-price="289.90"
+        data-image="img/camisa6.png"
+        data-description="Camisa campeã da Euro 1988."
+      >
+        <img src="img/camisa6.png">
+        <h4>Holanda 1988</h4>
+        <span class="price">R$ 289,90</span>
+      </article>
     </div>
 
     <button class="expand-arrow"></button>
   </section>
 
   <!-- EUROPEIAS -->
-  <section class="store-section" id="europeias">
+  <section class="store-section" id="europeias" data-category="europeias">
     <h3 class="section-title">Europeias</h3>
 
     <div class="products-grid">
-      <article class="product-card"><img src="img/camisa1.png"><h4>Real Madrid</h4><span class="price">R$ 319,90</span></article>
-      <article class="product-card"><img src="img/camisa2.png"><h4>Barcelona</h4><span class="price">R$ 309,90</span></article>
-      <article class="product-card"><img src="img/camisa3.png"><h4>Manchester City</h4><span class="price">R$ 329,90</span></article>
+      <article class="product-card"
+        data-id="eur-1"
+        data-name="Real Madrid"
+        data-price="319.90"
+        data-image="img/camisa1.png"
+        data-description="Camisa oficial Real Madrid."
+      >
+        <img src="img/camisa1.png">
+        <h4>Real Madrid</h4>
+        <span class="price">R$ 319,90</span>
+      </article>
 
-      <article class="product-card hidden"><img src="img/camisa4.png"><h4>PSG</h4><span class="price">R$ 299,90</span></article>
-      <article class="product-card hidden"><img src="img/camisa5.png"><h4>Milan</h4><span class="price">R$ 289,90</span></article>
-      <article class="product-card hidden"><img src="img/camisa6.png"><h4>Bayern</h4><span class="price">R$ 319,90</span></article>
+      <article class="product-card"
+        data-id="eur-2"
+        data-name="Barcelona"
+        data-price="309.90"
+        data-image="img/camisa2.png"
+        data-description="Camisa oficial Barcelona."
+      >
+        <img src="img/camisa2.png">
+        <h4>Barcelona</h4>
+        <span class="price">R$ 309,90</span>
+      </article>
+
+      <article class="product-card"
+        data-id="eur-3"
+        data-name="Manchester City"
+        data-price="329.90"
+        data-image="img/camisa3.png"
+        data-description="Camisa oficial Manchester City."
+      >
+        <img src="img/camisa3.png">
+        <h4>Manchester City</h4>
+        <span class="price">R$ 329,90</span>
+      </article>
+
+      <article class="product-card hidden"
+        data-id="eur-4"
+        data-name="PSG"
+        data-price="299.90"
+        data-image="img/camisa4.png"
+        data-description="Camisa oficial PSG."
+      >
+        <img src="img/camisa4.png">
+        <h4>PSG</h4>
+        <span class="price">R$ 299,90</span>
+      </article>
+
+      <article class="product-card hidden"
+        data-id="eur-5"
+        data-name="Milan"
+        data-price="289.90"
+        data-image="img/camisa5.png"
+        data-description="Camisa oficial Milan."
+      >
+        <img src="img/camisa5.png">
+        <h4>Milan</h4>
+        <span class="price">R$ 289,90</span>
+      </article>
+
+      <article class="product-card hidden"
+        data-id="eur-6"
+        data-name="Bayern"
+        data-price="319.90"
+        data-image="img/camisa6.png"
+        data-description="Camisa oficial Bayern de Munique."
+      >
+        <img src="img/camisa6.png">
+        <h4>Bayern</h4>
+        <span class="price">R$ 319,90</span>
+      </article>
     </div>
 
     <button class="expand-arrow"></button>
   </section>
 
 </main>
+
+
+<footer class="site-footer">
+  <div class="footer-container">
+
+    <!-- BRAND -->
+    <div class="footer-col brand">
+      <h4>GoalStore</h4>
+      <p>
+        Camisas de futebol originais e retrô.
+        Estilo, história e paixão pelo jogo.
+      </p>
+    </div>
+
+    <!-- NAVEGAÇÃO -->
+    <div class="footer-col">
+      <h5>Navegação</h5>
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Categorias</a></li>
+        <li><a href="#">Ofertas</a></li>
+        <li><a href="#">Lançamentos</a></li>
+      </ul>
+    </div>
+
+    <!-- CATEGORIAS -->
+    <div class="footer-col">
+      <h5>Categorias</h5>
+      <ul>
+        <li><a href="#">Camisas Retrô</a></li>
+        <li><a href="#">Seleções</a></li>
+        <li><a href="#">Brasileirão</a></li>
+        <li><a href="#">Europeias</a></li>
+      </ul>
+    </div>
+
+    <!-- SUPORTE -->
+    <div class="footer-col">
+      <h5>Suporte</h5>
+      <ul>
+        <li><a href="#">Central de Ajuda</a></li>
+        <li><a href="#">Trocas & Devoluções</a></li>
+        <li><a href="#">Contato</a></li>
+        <li><a href="#">Política de Privacidade</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    <span>© 2026 GoalStore. Todos os direitos reservados.</span>
+  </div>
+</footer>
+
 
     
 
