Adição do carrinho funcional, página de checkout e tela de pagamento concluido.

--- a/index/index.html
+++ b/index/index.html
@@ -380,10 +380,14 @@
 
 
 <!-- FLOATING CART -->
-<button class="floating-cart" aria-label="Carrinho">
+<a href="cart.html" class="floating-cart" aria-label="Abrir carrinho">
   <img src="imgs/126510.png" alt="Carrinho">
   <span class="cart-count">0</span>
-</button>
+</a>
+
+<!-- TOAST -->
+<div id="toast" class="toast">Seu produto foi adicionado ao carrinho</div>
+
 
 <script src="index.js"></script>
 </body>
