--- a/index/product.html
+++ b/index/product.html
@@ -69,6 +69,12 @@
     </div>
   </main>
 
+  <div class="toast" id="toast">
+  <span>Produto adicionado ao carrinho</span>
+</div>
+
+
+
   <script src="product.js"></script>
 </body>
 </html>
