Finalização do site, sistemas funcionais, checkout, algumas imagens adicionadas. Pré lançamento.

--- a/index/checkout.html
+++ b/index/checkout.html
@@ -17,6 +17,9 @@
     <a href="cart.html" class="back-link">← Voltar ao carrinho</a>
     <h1>Finalizar compra</h1>
   </header>
+<div class="checkout-subtitle"> ⚽Estamos quase lá! Vamos finalizar sua compra.</div>
+
+  
 
   <main class="checkout-container">
 
@@ -44,19 +47,19 @@
 
         <label class="payment-option">
           <input type="radio" name="payment" required>
-          <img src="assets/pix.png" alt="Pix">
+          <img src="imgs/pix.png" alt="Pix">
           <span>Pix</span>
         </label>
 
         <label class="payment-option">
           <input type="radio" name="payment">
-          <img src="assets/card.png" alt="Cartão">
+          <img src="imgs/cartao.png" alt="Cartão">
           <span>Cartão de crédito</span>
         </label>
 
         <label class="payment-option">
           <input type="radio" name="payment">
-          <img src="assets/boleto.png" alt="Boleto">
+          <img src="imgs/boleto-codigo-barra-preto-black-bar-code-ticket-logo-png_seeklogo-411403.png" alt="Boleto">
           <span>Boleto</span>
         </label>
       </section>
@@ -78,6 +81,20 @@
     </aside>
 
   </main>
+
+  <footer class="checkout-footer">
+  <div class="checkout-footer-inner">
+    <p>
+      🔒 Ambiente seguro & criptografado<br>
+      Seus dados são protegidos e utilizados apenas para fins de demonstração.
+    </p>
+
+    <p style="margin-top: 0.8rem;">
+      © 2026 <strong>GoalStore</strong> — Checkout seguro
+    </p>
+  </div>
+</footer>
+
 
   <script src="checkout.js"></script>
 </body>
