--- a/index/index.html
+++ b/index/index.html
@@ -61,14 +61,15 @@
 <!-- CATEGORIAS -->
 <aside class="categories">
   <ul class="categories-list">
-    <li class="category-item">Camisas Retrô</li>
-    <li class="category-item">Seleções</li>
-    <li class="category-item">Brasileirão</li>
-    <li class="category-item">Europeias</li>
-    <li class="category-item">Edição Especial</li>
-    <li class="category-item">Treino</li>
+    <li class="category-item" data-target="retro">Camisas Retrô</li>
+    <li class="category-item" data-target="selecoes">Seleções</li>
+    <li class="category-item" data-target="brasileirao">Brasileirão</li>
+    <li class="category-item" data-target="europeias">Europeias</li>
+    <li class="category-item" data-target="edicao-especial">Edição Especial</li>
+    <li class="category-item" data-target="treino">Treino</li>
   </ul>
 </aside>
+
 
 <main class="store">
 
@@ -81,10 +82,10 @@
         data-id="retro-1"
         data-name="Flamengo 1995"
         data-price="249.90"
-        data-image="img/camisa1.png"
+        data-image="imgs/IV6047_1_APPAREL_Photography_Front-View_white-png-removebg-preview.png"
         data-description="Camisa retrô Flamengo 1995, tecido premium."
       >
-        <img src="img/camisa1.png">
+        <img src="imgs/IV6047_1_APPAREL_Photography_Front-View_white-png-removebg-preview.png">
         <h4>Flamengo 1995</h4>
         <span class="price">R$ 249,90</span>
       </article>
@@ -93,10 +94,10 @@
         data-id="retro-2"
         data-name="Brasil 1970"
         data-price="269.90"
-        data-image="img/camisa2.png"
+        data-image="imgs/BRASILI20241.png"
         data-description="Camisa histórica da seleção brasileira de 1970."
       >
-        <img src="img/camisa2.png">
+        <img src="imgs/BRASILI20241.png">
         <h4>Brasil 1970</h4>
         <span class="price">R$ 269,90</span>
       </article>
@@ -105,10 +106,10 @@
         data-id="retro-3"
         data-name="Milan 1989"
         data-price="289.90"
-        data-image="img/camisa3.png"
+        data-image="imgs/puma-ac-mailand-trikot-home-2025-2026-rot-f01-rot-779962-removebg-preview-1-.png"
         data-description="Camisa retrô do Milan campeão europeu."
       >
-        <img src="img/camisa3.png">
+        <img src="imgs/puma-ac-mailand-trikot-home-2025-2026-rot-f01-rot-779962-removebg-preview-1-.png">
         <h4>Milan 1989</h4>
         <span class="price">R$ 289,90</span>
       </article>
@@ -117,10 +118,10 @@
         data-id="retro-4"
         data-name="Ajax 1995"
         data-price="259.90"
-        data-image="img/camisa4.png"
+        data-image="imgs/625184_d6495cbb9fac4ff08c35d53446d2d8be~mv2.avif"
         data-description="Camisa lendária do Ajax de 1995."
       >
-        <img src="img/camisa4.png">
+        <img src="imgs/625184_d6495cbb9fac4ff08c35d53446d2d8be~mv2.avif">
         <h4>Ajax 1995</h4>
         <span class="price">R$ 259,90</span>
       </article>
@@ -129,10 +130,10 @@
         data-id="retro-5"
         data-name="Barcelona 1999"
         data-price="279.90"
-        data-image="img/camisa5.png"
+        data-image="imgs/fcbarcelona202425inf.png"
         data-description="Camisa clássica do Barcelona anos 90."
       >
-        <img src="img/camisa5.png">
+        <img src="imgs/fcbarcelona202425inf.png">
         <h4>Barcelona 1999</h4>
         <span class="price">R$ 279,90</span>
       </article>
@@ -141,10 +142,10 @@
         data-id="retro-6"
         data-name="Corinthians 2000"
         data-price="239.90"
-        data-image="img/camisa6.png"
+        data-image="imgs/058813IDA3-removebg-preview.png"
         data-description="Camisa do Corinthians campeão mundial de 2000."
       >
-        <img src="img/camisa6.png">
+        <img src="imgs/058813IDA3-removebg-preview.png">
         <h4>Corinthians 2000</h4>
         <span class="price">R$ 239,90</span>
       </article>
@@ -162,10 +163,10 @@
         data-id="sel-1"
         data-name="Brasil 2022"
         data-price="299.90"
-        data-image="img/camisa1.png"
+        data-image="imgs/BRASILI20241.png"
         data-description="Camisa oficial Brasil Copa 2022."
       >
-        <img src="img/camisa1.png">
+        <img src="imgs/BRASILI20241.png">
         <h4>Brasil 2022</h4>
         <span class="price">R$ 299,90</span>
       </article>
@@ -174,10 +175,10 @@
         data-id="sel-2"
         data-name="Argentina 2022"
         data-price="299.90"
-        data-image="img/camisa2.png"
+        data-image="imgs/camisaargentina12026.png"
         data-description="Camisa campeã do mundo Argentina 2022."
       >
-        <img src="img/camisa2.png">
+        <img src="imgs/camisaargentina12026.png">
         <h4>Argentina 2022</h4>
         <span class="price">R$ 299,90</span>
       </article>
@@ -186,10 +187,10 @@
         data-id="sel-3"
         data-name="França 2018"
         data-price="289.90"
-        data-image="img/camisa3.png"
+        data-image="imgs/camisa_franca_home_eurocopa_patch_2024_25_azul_4823_1_b1511bfe00c5c49257e8e6a18c101e00.webp"
         data-description="Camisa campeã mundial França 2018."
       >
-        <img src="img/camisa3.png">
+        <img src="imgs/camisa_franca_home_eurocopa_patch_2024_25_azul_4823_1_b1511bfe00c5c49257e8e6a18c101e00.webp">
         <h4>França 2018</h4>
         <span class="price">R$ 289,90</span>
       </article>
@@ -315,6 +316,257 @@
     <button class="expand-arrow"></button>
   </section>
 
+  <!-- BRASILEIRÃO -->
+<section class="store-section" id="brasileirao" data-category="brasileirao">
+  <h3 class="section-title">Brasileirão</h3>
+
+  <div class="products-grid">
+
+    <article class="product-card"
+      data-id="br-1"
+      data-name="Flamengo 2024"
+      data-price="299.90"
+      data-image="img/camisa1.png"
+      data-description="Camisa oficial Flamengo temporada 2024."
+    >
+      <img src="img/camisa1.png">
+      <h4>Flamengo 2024</h4>
+      <span class="price">R$ 299,90</span>
+    </article>
+
+    <article class="product-card"
+      data-id="br-2"
+      data-name="Corinthians 2024"
+      data-price="289.90"
+      data-image="img/camisa2.png"
+      data-description="Camisa oficial Corinthians temporada 2024."
+    >
+      <img src="img/camisa2.png">
+      <h4>Corinthians 2024</h4>
+      <span class="price">R$ 289,90</span>
+    </article>
+
+    <article class="product-card"
+      data-id="br-3"
+      data-name="Palmeiras 2024"
+      data-price="309.90"
+      data-image="img/camisa3.png"
+      data-description="Camisa oficial Palmeiras temporada 2024."
+    >
+      <img src="img/camisa3.png">
+      <h4>Palmeiras 2024</h4>
+      <span class="price">R$ 309,90</span>
+    </article>
+
+    <article class="product-card hidden"
+      data-id="br-4"
+      data-name="São Paulo 2024"
+      data-price="299.90"
+      data-image="img/camisa4.png"
+      data-description="Camisa oficial São Paulo temporada 2024."
+    >
+      <img src="img/camisa4.png">
+      <h4>São Paulo 2024</h4>
+      <span class="price">R$ 299,90</span>
+    </article>
+
+    <article class="product-card hidden"
+      data-id="br-5"
+      data-name="Grêmio 2024"
+      data-price="279.90"
+      data-image="img/camisa5.png"
+      data-description="Camisa oficial Grêmio temporada 2024."
+    >
+      <img src="img/camisa5.png">
+      <h4>Grêmio 2024</h4>
+      <span class="price">R$ 279,90</span>
+    </article>
+
+    <article class="product-card hidden"
+      data-id="br-6"
+      data-name="Internacional 2024"
+      data-price="279.90"
+      data-image="img/camisa6.png"
+      data-description="Camisa oficial Internacional temporada 2024."
+    >
+      <img src="img/camisa6.png">
+      <h4>Internacional 2024</h4>
+      <span class="price">R$ 279,90</span>
+    </article>
+
+  </div>
+
+  <button class="expand-arrow"></button>
+</section>
+
+<!-- EDIÇÃO ESPECIAL -->
+<section class="store-section" id="edicao-especial" data-category="edicao-especial">
+  <h3 class="section-title">Edição Especial</h3>
+
+  <div class="products-grid">
+
+    <article class="product-card"
+      data-id="esp-1"
+      data-name="Brasil Ouro 2002"
+      data-price="349.90"
+      data-image="img/camisa1.png"
+      data-description="Edição especial comemorativa do penta."
+    >
+      <img src="img/camisa1.png">
+      <h4>Brasil Ouro 2002</h4>
+      <span class="price">R$ 349,90</span>
+    </article>
+
+    <article class="product-card"
+      data-id="esp-2"
+      data-name="Flamengo Libertadores"
+      data-price="339.90"
+      data-image="img/camisa2.png"
+      data-description="Camisa edição especial Libertadores."
+    >
+      <img src="img/camisa2.png">
+      <h4>Flamengo Libertadores</h4>
+      <span class="price">R$ 339,90</span>
+    </article>
+
+    <article class="product-card"
+      data-id="esp-3"
+      data-name="Real Madrid Champions"
+      data-price="369.90"
+      data-image="img/camisa3.png"
+      data-description="Edição especial Champions League."
+    >
+      <img src="img/camisa3.png">
+      <h4>Real Madrid Champions</h4>
+      <span class="price">R$ 369,90</span>
+    </article>
+
+    <article class="product-card hidden"
+      data-id="esp-4"
+      data-name="Barcelona Centenário"
+      data-price="359.90"
+      data-image="img/camisa4.png"
+      data-description="Camisa comemorativa centenário."
+    >
+      <img src="img/camisa4.png">
+      <h4>Barcelona Centenário</h4>
+      <span class="price">R$ 359,90</span>
+    </article>
+
+    <article class="product-card hidden"
+      data-id="esp-5"
+      data-name="Milan Legends"
+      data-price="349.90"
+      data-image="img/camisa5.png"
+      data-description="Edição especial ídolos do Milan."
+    >
+      <img src="img/camisa5.png">
+      <h4>Milan Legends</h4>
+      <span class="price">R$ 349,90</span>
+    </article>
+
+    <article class="product-card hidden"
+      data-id="esp-6"
+      data-name="PSG Limited"
+      data-price="379.90"
+      data-image="img/camisa6.png"
+      data-description="Edição limitada PSG."
+    >
+      <img src="img/camisa6.png">
+      <h4>PSG Limited</h4>
+      <span class="price">R$ 379,90</span>
+    </article>
+
+  </div>
+
+  <button class="expand-arrow"></button>
+</section>
+
+<!-- TREINO -->
+<section class="store-section" id="treino" data-category="treino">
+  <h3 class="section-title">Treino</h3>
+
+  <div class="products-grid">
+
+    <article class="product-card"
+      data-id="treino-1"
+      data-name="Treino Brasil"
+      data-price="199.90"
+      data-image="img/camisa1.png"
+      data-description="Camisa treino seleção brasileira."
+    >
+      <img src="img/camisa1.png">
+      <h4>Treino Brasil</h4>
+      <span class="price">R$ 199,90</span>
+    </article>
+
+    <article class="product-card"
+      data-id="treino-2"
+      data-name="Treino Flamengo"
+      data-price="189.90"
+      data-image="img/camisa2.png"
+      data-description="Camisa treino Flamengo."
+    >
+      <img src="img/camisa2.png">
+      <h4>Treino Flamengo</h4>
+      <span class="price">R$ 189,90</span>
+    </article>
+
+    <article class="product-card"
+      data-id="treino-3"
+      data-name="Treino Real Madrid"
+      data-price="219.90"
+      data-image="img/camisa3.png"
+      data-description="Camisa treino Real Madrid."
+    >
+      <img src="img/camisa3.png">
+      <h4>Treino Real Madrid</h4>
+      <span class="price">R$ 219,90</span>
+    </article>
+
+    <article class="product-card hidden"
+      data-id="treino-4"
+      data-name="Treino PSG"
+      data-price="209.90"
+      data-image="img/camisa4.png"
+      data-description="Camisa treino PSG."
+    >
+      <img src="img/camisa4.png">
+      <h4>Treino PSG</h4>
+      <span class="price">R$ 209,90</span>
+    </article>
+
+    <article class="product-card hidden"
+      data-id="treino-5"
+      data-name="Treino Barcelona"
+      data-price="219.90"
+      data-image="img/camisa5.png"
+      data-description="Camisa treino Barcelona."
+    >
+      <img src="img/camisa5.png">
+      <h4>Treino Barcelona</h4>
+      <span class="price">R$ 219,90</span>
+    </article>
+
+    <article class="product-card hidden"
+      data-id="treino-6"
+      data-name="Treino Bayern"
+      data-price="229.90"
+      data-image="img/camisa6.png"
+      data-description="Camisa treino Bayern."
+    >
+      <img src="img/camisa6.png">
+      <h4>Treino Bayern</h4>
+      <span class="price">R$ 229,90</span>
+    </article>
+
+  </div>
+
+  <button class="expand-arrow"></button>
+</section>
+
+
+
 </main>
 
 
@@ -345,10 +597,12 @@
     <div class="footer-col">
       <h5>Categorias</h5>
       <ul>
-        <li><a href="#">Camisas Retrô</a></li>
-        <li><a href="#">Seleções</a></li>
-        <li><a href="#">Brasileirão</a></li>
-        <li><a href="#">Europeias</a></li>
+        <li><a href="#" data-target="retro">Camisas Retrô</a></li>
+        <li><a href="#" data-target="selecoes">Seleções</a></li>
+        <li><a href="#" data-target="brasileirao">Brasileirão</a></li>
+        <li><a href="#" data-target="europeias">Europeias</a></li>
+        <li><a href="#" data-target="edicao-especial">Edição Especial</a></li>
+        <li><a href="#" data-target="treino">Treino</a></li>
       </ul>
     </div>
 
@@ -369,6 +623,7 @@
     <span>© 2026 GoalStore. Todos os direitos reservados.</span>
   </div>
 </footer>
+
 
 
     
