--- a/index/cart.html
+++ b/index/cart.html
@@ -13,8 +13,7 @@
     <a href="index.html" class="back-home">← Voltar para a loja</a>
 
     <div class="cart-title">
-      <img src="assets/cart.svg" alt="Carrinho">
-      <h1>Meu Carrinho</h1>
+      <h1>🛒 Meu Carrinho</h1>
     </div>
   </header>
 
